src/components/side-panel/_side-panel.scss
.side-panel {
  position: absolute;
  transition: all #{$default-transition-time}ms;
  transition-property: left, right, bottom, top, opacity;
  z-index: 0;
  &.small-size {
    // for small sizes the side panel should be over player controls
    z-index: 1;
  }
}

.vertical-side-panel {
  height: 100%;
}

.horizontal-side-panel {
  height: 0;
  left: 0;
  right: 0;
}

.side-panel-content {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

